--- a/projekt-aktuelles/files/tsv/layout/tsv-news/sass/modul-news.sass
+++ b/projekt-aktuelles/files/tsv/layout/tsv-news/sass/modul-news.sass
@@ -1,6 +1,21 @@
-.isotope-grid
-    .layout_full
-        width: 25%
+$tsv-red: #960011
 
-        &--width2
-            width: 50%
+.isotope-grid
+    // margin: 0 auto
+
+    .layout_full
+        width: 50%
+        padding: 15px
+        box-sizing: border-box
+
+        img
+            max-width: 100%
+
+        .name
+            background-color: $tsv-red
+            color: white
+            font-size: 17px
+            padding: 5px
+            border-bottom-left-radius: 5px
+            border-bottom-right-radius: 5px
+            margin-top: 0px
