--- a/projekt-aktuelles/files/tsv/layout/tsv-news/sass/modul-news.sass
+++ b/projekt-aktuelles/files/tsv/layout/tsv-news/sass/modul-news.sass
@@ -1,21 +1,47 @@
 $tsv-red: #960011
+$border-radius: 5px
+$box-shadow: 0px 2px 12px -1px rgba(0, 0, 0, 0.75)
 
 .isotope-grid
-    // margin: 0 auto
-
     .layout_full
-        width: 50%
+        position: relative
+        width: 33%
         padding: 15px
         box-sizing: border-box
 
         img
             max-width: 100%
 
+        .inner
+            position: relative
+            width: 100%
+            height: 100%
+            display: block
+            -webkit-box-shadow: $box-shadow
+            -moz-box-shadow: $box-shadow
+            box-shadow: $box-shadow
+            border-bottom-left-radius: $border-radius
+            border-bottom-right-radius: $border-radius
+            border-top-left-radius: $border-radius
+            border-top-right-radius: $border-radius
+
+        .name,
+        .date
+            background-color: white
+            color: $tsv-red
+            padding: 15px
+
         .name
-            background-color: $tsv-red
-            color: white
             font-size: 17px
-            padding: 5px
-            border-bottom-left-radius: 5px
-            border-bottom-right-radius: 5px
-            margin-top: 0px
+            margin: 0px
+
+        .date
+            .calendar
+                font-size: 25px
+                margin-right: 5px
+                vertical-align: middle
+
+            .time
+                font-size: 15px
+                font-weight: bold
+                vertical-align: bottom
